refactor: java 8 support